src/main/java/com/example/MovieBooking/Error/SeatBookedNotFoundException.java
package com.example.MovieBooking.Error;

public class SeatBookedNotFoundException extends RuntimeException{
    public SeatBookedNotFoundException(String ms)
    {
        super(ms);
    }
}
